<resources>
    <string name="app_name">Schedio</string>
    <string name="login_text">Je bent aangemeld!</string>
    <string name="logout_text">Je bent afgemeld!</string>
    <string name="welcome_text">Welkom</string>
    <string name="login_button">Aanmelden</string>
    <string name="logout_button">Afmelden</string>
    <string name="menu_home">Start</string>
    <string name="menu_about_us">Over ons</string>
    <string name="menu_login">Aanmelden</string>
    <string name="menu_project_overview">Overzicht</string>
    <string name="menu_add_project">Project toevoegen</string>
    <string name="menu_see_stats">Statistieken</string>
    <string name="about_fragment_title">Over ons bedrijf</string>
    <string name="about_body_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui vivamus arcu felis bibendum ut tristique. Morbi tincidunt ornare massa eget egestas. Nam at lectus urna duis convallis convallis tellus id. Dolor sed viverra ipsum nunc aliquet. Eget felis eget nunc lobortis mattis aliquam. Aliquam sem fringilla ut morbi tincidunt augue interdum velit. Adipiscing at in tellus integer. Ullamcorper morbi tincidunt ornare massa eget. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper. Adipiscing bibendum est ultricies integer quis auctor. Ridiculus mus mauris vitae ultricies leo. Varius morbi enim nunc faucibus a pellentesque sit.

Sit amet risus nullam eget felis eget. Adipiscing tristique risus nec feugiat in fermentum posuere urna. Pulvinar neque laoreet suspendisse interdum consectetur. Scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. In ornare quam viverra orci sagittis eu. Non curabitur gravida arcu ac tortor. Elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique. Tincidunt ornare massa eget egestas purus viverra. Viverra justo nec ultrices dui. Tincidunt arcu non sodales neque. Tellus rutrum tellus pellentesque eu tincidunt tortor. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Dictumst quisque sagittis purus sit. Gravida cum sociis natoque penatibus et magnis dis parturient. Orci a scelerisque purus semper. Blandit volutpat maecenas volutpat blandit aliquam. Eget lorem dolor sed viverra ipsum nunc aliquet bibendum.

Ultrices dui sapien eget mi. Euismod quis viverra nibh cras pulvinar mattis nunc. Phasellus vestibulum lorem sed risus. Faucibus ornare suspendisse sed nisi lacus. Maecenas sed enim ut sem viverra aliquet eget sit amet. Tellus cras adipiscing enim eu turpis egestas pretium. Massa ultricies mi quis hendrerit dolor magna. Faucibus a pellentesque sit amet porttitor eget dolor morbi non. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Aliquet enim tortor at auctor urna nunc id cursus.

Odio tempor orci dapibus ultrices. At quis risus sed vulputate odio ut enim blandit. Id aliquet risus feugiat in ante metus dictum at. Velit laoreet id donec ultrices tincidunt arcu non. Id volutpat lacus laoreet non curabitur gravida. Nulla facilisi etiam dignissim diam quis enim lobortis scelerisque. Quis hendrerit dolor magna eget est lorem ipsum dolor. A iaculis at erat pellentesque. Non diam phasellus vestibulum lorem sed risus ultricies tristique. Tincidunt eget nullam non nisi est sit amet. Ut sem nulla pharetra diam. Eget lorem dolor sed viverra ipsum nunc aliquet bibendum enim. Tempor nec feugiat nisl pretium fusce id velit. Et magnis dis parturient montes nascetur ridiculus.

Tempus egestas sed sed risus pretium quam vulputate dignissim. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Adipiscing bibendum est ultricies integer quis auctor elit. Nec tincidunt praesent semper feugiat nibh sed pulvinar. Arcu vitae elementum curabitur vitae nunc sed velit dignissim sodales. Iaculis at erat pellentesque adipiscing commodo elit at. Mauris a diam maecenas sed enim ut sem. Justo nec ultrices dui sapien. Odio morbi quis commodo odio aenean sed adipiscing diam. Ultrices eros in cursus turpis massa tincidunt dui ut ornare. Tincidunt id aliquet risus feugiat in ante. Nisl vel pretium lectus quam.

Odio morbi quis commodo odio aenean sed. Orci phasellus egestas tellus rutrum tellus. Facilisis sed odio morbi quis commodo odio aenean sed adipiscing. Non arcu risus quis varius quam quisque id. Arcu odio ut sem nulla pharetra diam sit amet nisl. Integer feugiat scelerisque varius morbi enim. Aliquam faucibus purus in massa tempor nec. Orci porta non pulvinar neque laoreet. Enim nulla aliquet porttitor lacus luctus accumsan tortor posuere ac. Ut enim blandit volutpat maecenas volutpat blandit aliquam. Habitant morbi tristique senectus et netus et malesuada fames ac. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum lectus. Odio aenean sed adipiscing diam donec adipiscing tristique. Ipsum dolor sit amet consectetur. Tellus id interdum velit laoreet id donec ultrices. Praesent tristique magna sit amet purus gravida. Eu non diam phasellus vestibulum lorem sed risus ultricies tristique. Elit ullamcorper dignissim cras tincidunt lobortis. Congue eu consequat ac felis.

Morbi non arcu risus quis varius quam. Leo integer malesuada nunc vel risus commodo viverra. Tortor at auctor urna nunc id cursus. Duis tristique sollicitudin nibh sit. Enim nunc faucibus a pellentesque sit amet. Donec massa sapien faucibus et molestie ac feugiat sed. Tristique senectus et netus et malesuada fames ac turpis. Donec ultrices tincidunt arcu non sodales neque. Interdum varius sit amet mattis vulputate enim. Morbi tristique senectus et netus et malesuada fames ac turpis. Dui nunc mattis enim ut tellus elementum sagittis vitae.

Rhoncus urna neque viverra justo nec. Adipiscing vitae proin sagittis nisl rhoncus mattis. Sodales neque sodales ut etiam sit. Erat pellentesque adipiscing commodo elit. Fusce ut placerat orci nulla pellentesque. Amet mattis vulputate enim nulla aliquet porttitor lacus luctus. Vel quam elementum pulvinar etiam non. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. Orci phasellus egestas tellus rutrum tellus. Id cursus metus aliquam eleifend mi in nulla. Dignissim enim sit amet venenatis. Curabitur vitae nunc sed velit dignissim sodales. Ut pharetra sit amet aliquam id diam. Magna ac placerat vestibulum lectus mauris. Nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Aliquet lectus proin nibh nisl condimentum id. Sed augue lacus viverra vitae congue. Et netus et malesuada fames ac turpis. Sit amet consectetur adipiscing elit duis tristique sollicitudin nibh sit.

Nibh nisl condimentum id venenatis a condimentum vitae. Sem nulla pharetra diam sit amet nisl suscipit adipiscing. Nec feugiat nisl pretium fusce id velit ut tortor. Facilisis leo vel fringilla est. Volutpat lacus laoreet non curabitur gravida arcu. Sit amet cursus sit amet. Enim ut tellus elementum sagittis vitae et leo. Elementum nibh tellus molestie nunc non blandit. Nec ultrices dui sapien eget mi. Velit laoreet id donec ultrices tincidunt arcu non sodales. Nec nam aliquam sem et tortor consequat id. Egestas congue quisque egestas diam in. Nisl nunc mi ipsum faucibus. Vitae tempus quam pellentesque nec nam aliquam sem. Suspendisse sed nisi lacus sed viverra. Fermentum dui faucibus in ornare. Et malesuada fames ac turpis egestas.

Ipsum dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Consequat interdum varius sit amet. Tellus rutrum tellus pellentesque eu. Arcu bibendum at varius vel pharetra vel turpis nunc. Ut faucibus pulvinar elementum integer enim. Turpis nunc eget lorem dolor sed viverra. Venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam. In aliquam sem fringilla ut morbi tincidunt augue interdum. At tempor commodo ullamcorper a. Pretium aenean pharetra magna ac placerat vestibulum lectus. Aliquet lectus proin nibh nisl condimentum id. Senectus et netus et malesuada fames. Odio euismod lacinia at quis risus sed vulputate odio ut. Nec ultrices dui sapien eget mi. Pharetra magna ac placerat vestibulum. Nisl tincidunt eget nullam non nisi est. Turpis egestas sed tempus urna et pharetra. In hendrerit gravida rutrum quisque non tellus. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. Dignissim convallis aenean et tortor at risus viverra adipiscing.
    </string>
    <string name="project_name">Project naam</string>
    <string name="project_start_date">Startdatum</string>
    <string name="project_end_date">Einddatum</string>
    <string name="project_budget">Budget</string>
    <string name="project_status">Status</string>
    <string name="project_type">Type</string>
    <string name="submit">Toevoegen</string>
    <string name="edit_project">Pas project aan</string>
    <string name="delete_project">Verwijder project</string>
    <string name="empty_field">Verplicht veld</string>
    <string name="too_short_project_name">Minstens 5 karakters</string>
    <string name="too_long_project_name">Hoogstens 25 karakters</string>
    <string name="no_allowed_number">Vul een geheel getal groter dan of gelijk aan 0 in</string>
    <string name="start_date_after_end_date">Startdatum ligt na einddatum</string>
</resources>